--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML, CSS & Git Basics - task</title>
+    <link  rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<header>
+    <h1>Egor Seleznev</h1>
+
+</header>
 
 </body>
 </html>
