refactor: style.css

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 });
 
                 });
-                </pre>
+                    </pre>
                 <h2 id="experience">Work Experience:</h2>
                 <hr>
 
@@ -135,22 +135,14 @@
     </div>
 </main>
 <footer class="site-footer h-card">
-    <data class="u-url" href="/"></data>
-
     <div class="wrapper">
-
-
         <div class="footer-col-wrapper">
             <div class="footer-col footer-col-1">
-                <ul class="contact-list">
-                    <li class="p-name">Egor Seleznev</li>
-                    <a class="u-email" href="mailto:oko.webdev@gmail.com"> oko.webdev@gmail.com</a>
-                </ul>
+                <img src="img/logo-rsschool3.png" />
             </div>
 
-
             <div class="footer-col footer-col-3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, voluptate!</p>
+                <p>Saint-Petersburg 2021</p>
             </div>
         </div>
 
